--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@privy-io/react-auth": "^2.13.3",
+    "@privy-io/wagmi": "^1.0.3",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "ethers": "^6.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-together": "^0.4.2",
@@ -23,9 +26,8 @@
     "vite": "^6.3.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.7",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^3.4.17"
   }
 }
