--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.13.3",
     "@privy-io/wagmi": "^1.0.3",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-together": "^0.4.2",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "ethers": "^6.14.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
-    "ethers": "^6.14.1",
     "hardhat": "^2.24.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
