--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,10 +18,10 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.13.3",
     "@privy-io/wagmi": "^1.0.3",
+    "ethers": "^6.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-together": "^0.4.2",
-    "ethers": "^6.14.1"
+    "react-together": "^0.4.2"
   },
   "devDependencies": {
     "@types/react": "^19.1.5",
@@ -27,6 +30,7 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "postcss": "^8.5.3",
+    "rollup": "^4.41.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
