--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethers": "^6.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0",
     "react-together": "^0.4.2"
   },
   "devDependencies": {
