--- a/.gitignore
+++ b/.gitignore
@@ -3,23 +3,34 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Production build
 dist/
 build/
 
-# Environment variables
+# Environment variables - CRITICAL FOR SECURITY
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.example
+
+# Private keys and secrets - NEVER COMMIT THESE
+*.pem
+*.key
+*.p12
+*.pfx
+private-key.txt
+secrets.json
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS generated files
 .DS_Store
@@ -33,6 +44,10 @@ Thumbs.db
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
 # Runtime data
 pids
@@ -40,6 +55,84 @@ pids
 *.seed
 *.pid.lock
 
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
 # Vercel
-.vercel 
 .vercel
+.vercel/
+
+# Archive/development files
+archive/
+
+# Backup files
+*.backup
+*.bak
+*.orig
+
+# Local development database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Test files
+test-results/
+playwright-report/
+test-results.xml
+
+# Readme files
+FARCASTER_MINIAPP_PROMPT.md
+MULTIPLAYER_WAGER_GAME_TEMPLATE.md
+# Local development files
+dev-backups/
